tests/language_modules/05_records/invalid_semantics/unknown_record_literal_type.vf
module UnknownRecordLiteralType

procedure main()
is
    let account: Integer = Account { id: 1 }
    check true
end main

end UnknownRecordLiteralType